tests/invariants/fail/non-inductive.act
contract C

// The invariant x < 9 is true, but cannot be proved as it is not inductive.

// If we assume that the invariant holds at the start of the call to j, then
// there is an execution path (x == 7) where the invariant does not hold over
// the post state.

// A stronger invariant (e.g. x < 3) can succesfully be proven

constructor
interface constructor()

creates

    uint x := 0

invariants

    x < 9

transition f
interface f()

iff x == 0

    storage

        x := 1

transition g
interface g()

iff x == 1

    storage

        x := 2

transition j
interface j()

iff x == 7

    storage

        x := 100
